src/tests/evaluation_error/uncallable_object/snapshots/monkey_interpreter__tests__evaluation_error__uncallable_object__test_uncallable_object_case_6_lexical_analysis.snap
---
source: src/tests/evaluation_error/uncallable_object/mod.rs
expression: tokens
---
[
    Function,
    OpeningRoundBracket,
    Identifier {
        literal: "x",
    },
    ClosingRoundBracket,
    OpeningCurlyBracket,
    Identifier {
        literal: "x",
    },
    ClosingCurlyBracket,
    OpeningRoundBracket,
    Integer {
        literal: 1,
    },
    ClosingRoundBracket,
    OpeningRoundBracket,
    Integer {
        literal: 2,
    },
    ClosingRoundBracket,
    SemiColon,
]
