src/tests/evaluation_error/uncallable_object/snapshots/monkey_interpreter__tests__evaluation_error__uncallable_object__test_uncallable_object_case_6_syntax_analysis.snap
---
source: src/tests/evaluation_error/uncallable_object/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: Call {
            function: Call {
                function: Function {
                    parameters: [
                        "x",
                    ],
                    block: Block {
                        nodes: [
                            Expression {
                                expression: Identifier {
                                    identifier: "x",
                                },
                            },
                        ],
                    },
                },
                arguments: [
                    Integer {
                        literal: 1,
                    },
                ],
            },
            arguments: [
                Integer {
                    literal: 2,
                },
            ],
        },
    },
]
