src/tests/evaluation_error/uncallable_object/snapshots/monkey_interpreter__tests__evaluation_error__uncallable_object__test_uncallable_object_case_7_lexical_analysis.snap
---
source: src/tests/evaluation_error/uncallable_object/mod.rs
expression: tokens
---
[
    If,
    OpeningRoundBracket,
    True,
    ClosingRoundBracket,
    OpeningCurlyBracket,
    Integer {
        literal: 1,
    },
    ClosingCurlyBracket,
    Else,
    OpeningCurlyBracket,
    Integer {
        literal: 2,
    },
    ClosingCurlyBracket,
    OpeningRoundBracket,
    Integer {
        literal: 3,
    },
    ClosingRoundBracket,
    SemiColon,
]
