src/tests/evaluation_error/uncallable_object/snapshots/monkey_interpreter__tests__evaluation_error__uncallable_object__test_uncallable_object_case_7_syntax_analysis.snap
---
source: src/tests/evaluation_error/uncallable_object/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: Call {
            function: If {
                condition: Boolean {
                    literal: true,
                },
                consequence: Block {
                    nodes: [
                        Expression {
                            expression: Integer {
                                literal: 1,
                            },
                        },
                    ],
                },
                alternative: Some(
                    Block {
                        nodes: [
                            Expression {
                                expression: Integer {
                                    literal: 2,
                                },
                            },
                        ],
                    },
                ),
            },
            arguments: [
                Integer {
                    literal: 3,
                },
            ],
        },
    },
]
